--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -28,8 +28,8 @@ jobs:
       - name: Checkout gh-pages branch
         run: |
           git checkout -b gh-pages
-          git reset --hard
-          git clean -fdx
+         # git reset --hard
+         # git clean -fdx
 
       - name: Copy charts and index
         run: |
